# SkillBridge-AI

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  jobs.db  pyproject.toml  requirements.txt  setup.py  vercel.json
api/: index.py
data/: vector_store.index  vector_store.json
data/processed/: adzuna_data_jobs.json  test_10_jobs.json
docs/: architecture.md  evaluation_report.md
frontend/: app.py
frontend/static/: style.css
notebooks/: 01_data_exploration.ipynb  01_eda.ipynb  02_adzuna_client_test.ipynb  02_resume_parsing.ipynb  03_embeddings.ipynb  04_matching_baseline.ipynb  05_evaluation_metrics.ipynb
requirements/: requirements-dev.txt  requirements-prod.txt
scripts/: enrich_jobs.py  fix_db_schema.py  run_backend.py  run_frontend.py  run_pipeline.py  scrape_jobs.py
src/backend/: main.py  routes.py  schemas.py  vercel.json
src/backend/db/: __init__.py  base.py  models.py  session.py  (+2 more)
src/data_collection/: remoteok_api.py
src/data_ingestion/: adzuna_client.py  config.py  main.py  schemas.py  tag_generator.py  utils.py
src/embeddings/: text_embedder.py
src/evaluation/: metrics.py
src/features/: embedding_generator.py  vector_store.py
src/frontend/: app.py  sample_jobs.json
src/ocr/: pdf_parser.py
src/preprocessing/: experience_extractor.py  skill_extractor.py  text_cleaner.py
src/recommender/: recommender.py
src/storage/: json_repository.py  vector_store.py
src/utils/: logging_utils.py
test/: test_preprocessing.py
tests/: test_embeddings.py  test_recommender.py  test_scraper.py  test_text_embedder.py
(+1 files in other folders)
