[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-matcher"
version = "0.1.0"
description = "An end-to-end system that parses resumes, extracts skills, and recommends relevant job postings."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.6",
    "pydantic>=1.10",
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "pdfplumber>=0.9",
    "PyPDF2>=3.0",
    "streamlit>=1.32",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
